--- a/app/src/main/res/layout/activity_f1_section05.xml
+++ b/app/src/main/res/layout/activity_f1_section05.xml
@@ -36,7 +36,7 @@
                 android:orientation="vertical">
 
                 <!--RS15-->
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/RS15cv"
                     style="@style/cardView">
 
@@ -63,10 +63,10 @@
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
                 <!--RS87 - Radio-->
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/RS87cv"
                     style="@style/cardView"
                     android:layout_width="match_parent"
@@ -148,10 +148,10 @@
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
                 <!--RS50 - Radio-->
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/RS50cv"
                     style="@style/cardView">
 
@@ -194,7 +194,7 @@
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
                 <LinearLayout
                     android:id="@+id/RS5155Layout"
@@ -204,7 +204,7 @@
                     android:visibility='@{RS50b.checked? View.GONE : View.VISIBLE}'>
 
                     <!--RS51 - Radio-->
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/RS51cv"
                         style="@style/cardView">
 
@@ -247,10 +247,10 @@
 
                         </LinearLayout>
 
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
                     <!--RS53 - Radio-->
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/RS53cv"
                         style="@style/cardView">
 
@@ -293,10 +293,10 @@
 
                         </LinearLayout>
 
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
                     <!--RS54 - Radio-->
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/RS54cv"
                         style="@style/cardView">
 
@@ -340,10 +340,10 @@
 
                         </LinearLayout>
 
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
                     <!--RS55 - Radio-->
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/RS55cv"
                         style="@style/cardView">
 
@@ -386,10 +386,10 @@
 
                         </LinearLayout>
 
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
                     <!--RS84 - Radio-->
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/RS84cv"
                         style="@style/cardView">
 
@@ -457,7 +457,7 @@
 
                         </LinearLayout>
 
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
                 </LinearLayout>
 
@@ -475,7 +475,7 @@
                     android:visibility="visible" />
 
                 <!--RS58 - Radio-->
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/RS58cv"
                     style="@style/cardView">
 
@@ -518,7 +518,7 @@
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
                 <LinearLayout
                     android:id="@+id/RS5962Layout"
@@ -528,7 +528,7 @@
                     android:visibility='@{RS58b.checked? View.GONE : View.VISIBLE}'>
 
                     <!--RS59 - EditText-->
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/RS59cv"
                         style="@style/cardView">
 
@@ -558,10 +558,10 @@
 
                         </LinearLayout>
 
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
                     <!--RS60 - Radio-->
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/RS60cv"
                         style="@style/cardView">
 
@@ -600,10 +600,10 @@
 
                         </LinearLayout>
 
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
                     <!--RS61 - Radio-->
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/RS61cv"
                         style="@style/cardView">
 
@@ -642,10 +642,10 @@
 
                         </LinearLayout>
 
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
                     <!--RS62 - Radio-->
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/RS62cv"
                         style="@style/cardView">
 
@@ -688,12 +688,12 @@
 
                         </LinearLayout>
 
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
                 </LinearLayout>
 
                 <!--RS63 - Radio-->
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/RS63cv"
                     style="@style/cardView">
 
@@ -736,10 +736,10 @@
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
                 <!--RS64 - Radio-->
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/RS64cv"
                     style="@style/cardView"
                     android:visibility='@{RS63b.checked? View.GONE : View.VISIBLE}'>
@@ -795,10 +795,10 @@
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
                 <!--RS65 - Radio-->
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/RS65cv"
                     style="@style/cardView">
 
@@ -841,10 +841,10 @@
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
                 <!--RS66 - Radio-->
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/RS66cv"
                     style="@style/cardView">
 
@@ -887,10 +887,10 @@
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
                 <!--RS67 - Radio-->
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/RS67cv"
                     style="@style/cardView">
 
@@ -925,10 +925,10 @@
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
                 <!--RS68 - Radio-->
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/RS68cv"
                     style="@style/cardView">
 
@@ -953,10 +953,10 @@
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
                 <!--RS69 - Radio-->
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/RS69cv"
                     style="@style/cardView">
 
@@ -1000,10 +1000,10 @@
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
                 <!--RS70 - Radio-->
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/RS70cv"
                     style="@style/cardView"
                     android:visibility='@{RS69b.checked? View.GONE : View.VISIBLE}'>
@@ -1029,7 +1029,7 @@
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
                 <TextView
                     style="@style/HeadingTitle"
@@ -1038,7 +1038,7 @@
                     android:text="@string/section7" />
 
                 <!--RS72 - Radio-->
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/RS72cv"
                     style="@style/cardView">
 
@@ -1082,7 +1082,7 @@
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
                 <LinearLayout
                     android:id="@+id/RS7375Layout"
@@ -1092,7 +1092,7 @@
                     android:visibility='@{RS7297.checked? View.GONE : View.VISIBLE}'>
 
                     <!--RS73 - Radio-->
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/RS73cv"
                         style="@style/cardView">
 
@@ -1135,10 +1135,10 @@
 
                         </LinearLayout>
 
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
                     <!--RS74 - CheckBox-->
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/RS74cv"
                         style="@style/cardView">
 
@@ -1238,10 +1238,10 @@
 
                         </LinearLayout>
 
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
                     <!--RS75 - Radio-->
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/RS75cv"
                         style="@style/cardView">
 
@@ -1285,12 +1285,12 @@
 
                         </LinearLayout>
 
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
                 </LinearLayout>
 
                 <!--RS77 - Radio-->
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/RS77cv"
                     style="@style/cardView">
 
@@ -1333,7 +1333,7 @@
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
                 <TextView
                     style="@style/HeadingTitle"
@@ -1342,7 +1342,7 @@
                     android:text="@string/section8" />
 
                 <!--RS78 - Radio - Multiple-->
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/RS78cv"
                     style="@style/cardView">
 
@@ -1444,10 +1444,10 @@
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
                 <!--RS79 - Radio - Multiple-->
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/RS79cv"
                     style="@style/cardView">
 
@@ -1549,7 +1549,7 @@
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
                 <TextView
 
@@ -1559,7 +1559,7 @@
                     android:text="@string/Section9" />
 
                 <!--RS80 - Radio - Multiple-->
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/RS76cv"
                     style="@style/cardView">
 
@@ -1985,10 +1985,10 @@
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
                 <!--RS81 - Radio-->
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/RS81cv"
                     style="@style/cardView">
 
@@ -2031,10 +2031,10 @@
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
                 <!--RS82 - EditText -->
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/RS82cv"
                     style="@style/cardView"
                     android:visibility='@{RS81b.checked? View.GONE : View.VISIBLE}'>
@@ -2061,7 +2061,7 @@
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
                 <!--&lt;!&ndash;RS83 - Radio&ndash;&gt;
                 <android.support.v7.widget.CardView
@@ -2110,7 +2110,7 @@
                 </android.support.v7.widget.CardView>-->
 
                 <!--RS85 - Radio-->
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/RS85cv"
                     style="@style/cardView">
 
@@ -2147,10 +2147,10 @@
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
                 <!--RS86h1 - EditText-->
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/RS86acv"
                     style="@style/cardView">
 
@@ -2338,10 +2338,10 @@
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
                 <!--RS86h2 - EditText-->
-                <android.support.v7.widget.CardView
+                <androidx.cardview.widget.CardView
                     android:id="@+id/RS86bcv"
                     style="@style/cardView"
                     android:visibility='@{RS861a.checked || RS862a.checked || RS863a.checked || RS864a.checked ? View.VISIBLE : View.GONE}'>
@@ -2400,7 +2400,7 @@
 
                     </LinearLayout>
 
-                </android.support.v7.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
             </LinearLayout>
 
