--- a/app/src/main/res/layout/activity_form2b_test.xml
+++ b/app/src/main/res/layout/activity_form2b_test.xml
@@ -43,7 +43,7 @@
                     android:orientation="vertical">
 
                     <!-- RST307A EditText -->
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/RST307Acv"
                         style="@style/cardView">
 
@@ -70,10 +70,10 @@
 
                         </LinearLayout>
 
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
                     <!-- RST307B Radio -->
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/RST307Bcv"
                         style="@style/cardView">
 
@@ -144,10 +144,10 @@
 
                         </LinearLayout>
 
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
                     <!-- RST307C Radio -->
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/RST307Ccv"
                         style="@style/cardView">
 
@@ -185,10 +185,10 @@
 
                         </LinearLayout>
 
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
                     <!-- RST307D EditText -->
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/RST307Dcv"
                         style="@style/cardView">
 
@@ -216,10 +216,10 @@
 
                         </LinearLayout>
 
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
                     <!-- RST307E EditText -->
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/RST307Ecv"
                         style="@style/cardView">
 
@@ -247,10 +247,10 @@
 
                         </LinearLayout>
 
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
                     <!-- RST307F EditText -->
-                    <android.support.v7.widget.CardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/RST307Fcv"
                         style="@style/cardView">
 
@@ -278,7 +278,7 @@
 
                         </LinearLayout>
 
-                    </android.support.v7.widget.CardView>
+                    </androidx.cardview.widget.CardView>
 
                     <LinearLayout
                         android:id="@+id/RST307Items"
