--- a/app/src/main/res/layout/activity_f1_section05.xml
+++ b/app/src/main/res/layout/activity_f1_section05.xml
@@ -2355,35 +2355,38 @@
                             style="@style/i_textview"
                             android:text="@string/RS86h2" />
 
-                        <RadioGroup
+                        <LinearLayout
                             android:id="@+id/RS86b"
-                            style="@style/radiogroup">
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:tag="0">
 
-                            <RadioButton
+                            <CheckBox
                                 android:id="@+id/RS865"
-                                style="@style/radiobutton"
+                                style="@style/checkbox"
                                 android:layout_weight="1"
                                 android:text="@string/RS86e" />
 
-                            <RadioButton
+                            <CheckBox
                                 android:id="@+id/RS866"
-                                style="@style/radiobutton"
+                                style="@style/checkbox"
                                 android:layout_weight="1"
                                 android:text="@string/RS86f" />
 
-                            <RadioButton
+                            <CheckBox
                                 android:id="@+id/RS867"
-                                style="@style/radiobutton"
+                                style="@style/checkbox"
                                 android:layout_weight="1"
                                 android:text="@string/RS86g" />
 
-                            <RadioButton
+                            <CheckBox
                                 android:id="@+id/RS868"
-                                style="@style/radiobutton"
+                                style="@style/checkbox"
                                 android:layout_weight="1"
                                 android:text="@string/RS86h" />
 
-                        </RadioGroup>
+                        </LinearLayout>
 
                         <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
                             android:id="@+id/RS86bd"
