--- a/app/src/main/res/layout/rs86acv.xml
+++ b/app/src/main/res/layout/rs86acv.xml
@@ -11,6 +11,11 @@
             name="callback"
             type="edu.aku.hassannaqvi.rsvstudy.ui.form1.Section04Activity" />
 
+
+        <variable
+            name="days"
+            type="edu.aku.hassannaqvi.rsvstudy.models.RSV" />
+
     </data>
 
 
@@ -64,8 +69,8 @@
                         style="@style/i_textview"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="3"
-                        android:text="NO:02" />
+                        android:layout_weight="4"
+                        android:text="@{days.txtDaysCounter}" />
 
                 </LinearLayout>
 
