--- a/app/src/main/res/layout/rs86acv.xml
+++ b/app/src/main/res/layout/rs86acv.xml
@@ -196,7 +196,7 @@
 
                     <TextView
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:layout_weight="3"
                         android:background="@color/colorPrimaryDark"
@@ -207,17 +207,20 @@
                     <RadioGroup
                         android:id="@+id/RS864"
                         style="@style/radiogroup"
+                        android:layout_height="match_parent"
                         android:layout_width="0dp"
                         android:layout_weight="7"
                         android:orientation="horizontal">
 
                         <RadioButton
+                            android:layout_height="match_parent"
                             android:id="@+id/RS864a"
                             style="@style/radiobutton"
                             android:layout_weight="1"
                             android:text="@string/yes" />
 
                         <RadioButton
+                            android:layout_height="match_parent"
                             android:id="@+id/RS864b"
                             style="@style/radiobutton"
                             android:layout_weight="1"
