--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -135,9 +135,7 @@
                                     android:layout_height="120dp"
                                     android:layout_margin="@dimen/cardview_compat_inset_shadow"
                                     android:layout_weight="1"
-                                    android:clickable="true"
-                                    android:foreground="?android:attr/selectableItemBackground"
-                                    android:onClick='@{()->callback.openForm(type.ASSESSMENT)}'>
+                                    android:foreground="?android:attr/selectableItemBackground">
 
                                     <RelativeLayout
                                         android:layout_width="match_parent"
@@ -150,6 +148,8 @@
                                             android:layout_height="wrap_content"
                                             android:layout_centerHorizontal="true"
                                             android:layout_centerVertical="true"
+                                            android:enabled="false"
+                                            android:onClick='@{()->callback.openForm(type.ASSESSMENT)}'
                                             android:text="Clinical Assessment"
                                             android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                             android:textColor="@color/colorPrimaryDark" />
