--- a/app/src/main/res/layout/rs86acv.xml
+++ b/app/src/main/res/layout/rs86acv.xml
@@ -31,6 +31,7 @@
             android:elevation="4dp"
             android:src="@drawable/ic_clear_black_24dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.cardview.widget.CardView
@@ -61,12 +62,12 @@
                         style="@style/i_textview"
                         android:layout_width="0dp"
                         android:layout_weight="10"
-                        android:paddingStart="50dp"
                         android:text="@string/RS86" />
 
                     <TextView
                         android:id="@+id/rs86DaysCounter"
                         style="@style/i_textview"
+                        android:paddingEnd="50dp"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="4"
