--- a/app/src/main/res/layout/activity_forms_list.xml
+++ b/app/src/main/res/layout/activity_forms_list.xml
@@ -11,7 +11,6 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".FormsList">
 
-
     <TextView
         android:id="@+id/psuNoTxt"
         android:layout_width="wrap_content"
@@ -27,9 +26,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:background="@color/colorPrimary"
-        android:orientation="vertical"
-
-        >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/totalForms"
@@ -43,7 +40,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
-
             android:textSize="16sp" />
 
     </LinearLayout>
@@ -54,6 +50,5 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/psuNoTxt"
         android:scrollbars="vertical" />
-
 
 </RelativeLayout>
