--- a/app/src/main/res/layout/upload_list_adapter.xml
+++ b/app/src/main/res/layout/upload_list_adapter.xml
@@ -32,7 +32,9 @@
                 android:layout_width="20dp"
                 android:layout_height="match_parent"
                 android:background="@color/red"
-                android:elevation="5.20dp"></FrameLayout>
+                android:elevation="5.20dp">
+
+            </FrameLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -66,15 +68,17 @@
                         style="@android:style/Widget.ProgressBar.Small"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
-                </LinearLayout>
 
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_margin="10dp"
                     android:background="@color/black"
-                    android:orientation="horizontal"></LinearLayout>
+                    android:orientation="horizontal">
+
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/utv_msg"
@@ -84,7 +88,11 @@
                     android:layout_marginRight="17.50dp"
                     android:layout_marginBottom="17.50dp"
                     tools:text="Results:    " />
+
             </LinearLayout>
+
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
+
 </layout>
